# stm32_i2c_v2_timing_calc

./: .gitignore  CMakeLists.txt  README.md
src/: main.cpp
